--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <header class="header">
         <div class="container header__menu">
             <a href="#" class="logo">
-                <img src="images/logo (1).png" alt="Image">
+                <img src="images/logo-icon.svg" alt="Image">
+                <span>AnsorMed</span>
             </a>
             <nav class="menu">
                 <ul class="menu__list">
@@ -89,5 +90,47 @@
         </div>
      </div>
       <!-- /SERVICES SECTION -->
+
+      <!-- SIGN UP SECTION --> 
+      <div class="sign">
+        <div class="container">
+            <h2>Qabulga ro’yxatdan o’ting</h2>
+            <div class="sign__items">
+                <a href="#">Qo’ng’iroq qilish</a>
+                <a href="#">Telegramdan yozish</a>
+            </div>
+        </div>
+      </div>
+      <!-- /SIGN UP SECTION -->
+
+      <!-- FOOTER SECTION -->
+      <footer class="footer">
+        <div class="container header__menu">
+            <a href="#" class="logo">
+                <img src="images/logo-icon.svg" alt="Image">
+                <span>AnsorMed</span>
+            </a>
+            <nav class="menu">
+                <ul class="menu__list">
+                    <li>
+                        <a href="#">Xizmatlar</a>
+                    </li>
+                    <li>
+                        <a href="#">Dorilar</a>
+                    </li>
+                    <li>
+                        <a href="#">Asal</a>
+                    </li>
+                    <li>
+                        <a href="#">Kontaktlar</a>
+                    </li>
+                    <li>
+                        <a href="#">Blog</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+      </footer>
+      <!-- /FOOTER SECTION -->
 </body>
 </html>
